--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,13 +4,27 @@
 
 <h1>Posts</h1>
 
-<div id="posts">
-  <% @posts.each do |post| %>
-    <%= render post %>
-    <p>
-      <%= link_to "Show this post", post %>
-    </p>
-  <% end %>
-</div>
+<table border="1">
+  <thead>
+    <tr>
+      <th>제목</th>
+      <th>내용</th>
+      <th>내용2</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @posts.each do |post| %>
+      <tr>
+        <td><%= post.title %></td>
+        <td>
+          <a href="<%= post_path(post) %>"><%= post.content %></a>
+        </td>
+        <td>
+          <%= link_to post.content, post_path(post) %>  
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <%= link_to "New post", new_post_path %>
